# suspiria

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
docker/development/: Dockerfile  build.sh  docker-entrypoint.sh  requirements.txt  start.sh
include/susperia/: exceptions.h  http.h  router.h  suspiria.h  utility.h
include/susperia/internal/: http.h  utility.h
include/susperia/internal/networking/: http.h  ip.h  networking.h  protocol.h  router.h
include/susperia/internal/networking/routing/: graph_router.h  router.h  routing.h
src/networking/: graph_router.cpp  http.cpp  http_parser.c  http_parser.h  utility.cpp
src/networking/server/: http.cpp  router.cpp
tests/: CMakeLists.txt  test_router.cpp  test_utility.cpp
tests/utility/: test_utility.cpp
